--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.4.5",
+    "react-spinners": "^0.13.7",
     "vite-tsconfig-paths": "^4.0.3"
   },
   "devDependencies": {
