--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "eslint": "^8.34.0",
     "framer-motion": "^8.0.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
