--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "eslint": "^8.34.0",
     "framer-motion": "^8.0.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
@@ -22,7 +21,11 @@
   "devDependencies": {
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
+    "@typescript-eslint/eslint-plugin": "^5.53.0",
+    "@typescript-eslint/parser": "^5.53.0",
     "@vitejs/plugin-react": "^3.0.0",
+    "eslint": "^8.34.0",
+    "eslint-plugin-react": "^7.32.2",
     "sass": "^1.56.2",
     "typescript": "^4.9.3",
     "vite": "^4.0.0"
